--- a/styles/style.css
+++ b/styles/style.css
@@ -145,6 +145,10 @@ h6 {
   height: 100%;
 }
 
+#__next {
+  background: #0f0b23 !important;
+  background: radial-gradient(circle, #161032 0%, #0f0b23 100%) !important;
+}
 #__next::after {
   content: "";
   display: block;
@@ -154,9 +158,17 @@ h6 {
   top: 0;
   left: 0;
   background: transparent url("/img/noise.webp") center/auto repeat;
-  z-index: -1;
+  z-index: 0;
+}
+#__next > div {
+  z-index: 2;
+  position: relative;
 }
 
+.bg-container-main {
+  position: relative;
+  z-index: 1;
+}
 .bg-container-main .bg {
   position: fixed;
   width: 100vw;
